--- a/app/src/main/res/layout/activity_match.xml
+++ b/app/src/main/res/layout/activity_match.xml
@@ -5,6 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/match_title"
+        android:layout_width="0dp"
+        android:layout_height="44dp"
+        app:layout_constraintEnd_toStartOf="@+id/match_chronometer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/start_match_button"
         android:layout_width="0dp"
@@ -12,7 +20,7 @@
         android:text="@string/start_match_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintTop_toBottomOf="@+id/match_title" />
 
     <Button
         android:id="@+id/start_jam_button"
@@ -22,7 +30,7 @@
         android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@+id/end_match_button"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintTop_toBottomOf="@+id/match_title" />
 
     <Button
         android:id="@+id/end_match_button"
@@ -60,7 +68,6 @@
         android:textColor="#092FEC"
         android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/end_match_button" />
 
     <Chronometer
@@ -74,52 +81,47 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/pivot"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:text="pivot"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/jam_chronometer" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/block_one"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
-        android:text="bloqueuse 1"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintStart_toEndOf="@+id/pivot"
         app:layout_constraintTop_toBottomOf="@+id/jam_chronometer" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/block_two"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
-        android:text="bloquese 2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/pivot" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/block_three"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="bloqueuse 3"
-        app:layout_constraintStart_toEndOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintStart_toEndOf="@+id/block_two"
+        app:layout_constraintTop_toBottomOf="@+id/block_one" />
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/jammer"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="24dp"
-        android:text="Jammeuse"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/jam_chronometer" />
 
@@ -150,12 +152,21 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/textView10"
-        android:layout_width="0dp"
-        android:layout_height="44dp"
-        android:text="Bloody vs Marmot"
-        app:layout_constraintEnd_toStartOf="@+id/match_chronometer"
+        android:id="@+id/status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@+id/jam_chronometer"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/start_jam_button" />
+
+    <ImageView
+        android:id="@+id/test_jail"
+        android:layout_width="69dp"
+        android:layout_height="66dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/jammer"
+        app:srcCompat="@drawable/ic_launcher_foreground" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
